--- a/perf-test.html
+++ b/perf-test.html
@@ -10,6 +10,7 @@
     </style>
 
     <script src="VampExamplePlugins.js"></script>
+    <script src="base64.js"></script>
     <script src="perf-test.js"></script>
   </head>
   <body>
