--- a/quick-test.html
+++ b/quick-test.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>VamPipe Adapter Test</title>
+    <title>Piper Adapter Test</title>
 
     <style type="text/css">
       body { margin: 5%; }
@@ -13,7 +13,7 @@
     <script src="quick-test.js"></script>
   </head>
   <body>
-    <h3>VamPipe Adapter Test</h3>
+    <h3>Piper Adapter Test</h3>
 
     <p id="test-result"></p>
     
