--- a/test/quick-test.html
+++ b/test/quick-test.html
@@ -9,7 +9,7 @@
       td, th { padding: 0.5em }
     </style>
 
-    <script src="VampExamplePlugins.js"></script>
+    <script src="../examples/VampExamplePlugins.js"></script>
     <script src="quick-test.js"></script>
   </head>
   <body>
